--- a/docs/felix/conf/encoding/engage-movies.properties
+++ b/docs/felix/conf/encoding/engage-movies.properties
@@ -28,12 +28,10 @@
 # Distribution format definition for 4 by 3 flash presenter/presentation download
 profile.flash.http.name = flash download
 profile.flash.http.input = stream
-profile.flash.http.output = visual
+profile.flash.http.output = audiovisual
 profile.flash.http.suffix = -25fps.flv
 profile.flash.http.mimetype = video/x-flv
-profile.flash.http.ffmpeg.command.video = -i #{in.video.path} -y -r 25 -vcodec flv -b 800000 -qscale 3.5 -ar 44100 -deinterlace
-profile.flash.http.ffmpeg.command.audio = -i #{in.audio.path} -ar 44100
-profile.flash.http.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{out.suffix}
+profile.flash.http.ffmpeg.command = -i #{in.video.path} -r 25 -vcodec flv -b 800000 -qscale 3.5 -deinterlace -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
 
 # Distribution format definition for 4 by 3 flash presenter/presentation download
 profile.flash-vga.http.name = flash download
@@ -41,16 +39,12 @@ profile.flash-vga.http.input = stream
 profile.flash-vga.http.output = visual
 profile.flash-vga.http.suffix = -10fps.flv
 profile.flash-vga.http.mimetype = video/x-flv
-profile.flash-vga.http.ffmpeg.command.video = -i #{in.video.path} -y -r 10 -vcodec flv -b 800000 -qscale 3.5 -ar 44100
-profile.flash-vga.http.ffmpeg.command.audio = -i #{in.audio.path} -ar 44100
-profile.flash-vga.http.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{out.suffix}
+profile.flash-vga.http.ffmpeg.command = -i #{in.video.path} -r 25 -vcodec flv -b 800000 -qscale 3.5 -deinterlace -ar 44100 #{out.dir}/#{out.name}#{out.suffix}
 
 # Format definition for 3 by 4 flash presenter/presentation preview in Matterhorn UIs
 profile.flash-preview.http.name = flash preview
 profile.flash-preview.http.input = stream
-profile.flash-preview.http.output = visual
+profile.flash-preview.http.output = audiovisual
 profile.flash-preview.http.suffix = -15fps-preview.flv
 profile.flash-preview.http.mimetype = video/x-flv
-profile.flash-preview.http.ffmpeg.command.video = -i #{in.video.path} -y -r 15 -vcodec flv -b 400000 -s 320x240 -ar 22050
-profile.flash-preview.http.ffmpeg.command.audio = -i #{in.audio.path} -ar 22050
-profile.flash-preview.http.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{out.suffix}
+profile.flash.http.ffmpeg.command = -i #{in.video.path} -r 15 -vcodec flv -b 1000 -qscale 3.5 -ar 22050 #{out.dir}/#{out.name}#{out.suffix}
