--- a/docs/felix/conf/encoding/matterhorn-movies.properties
+++ b/docs/felix/conf/encoding/matterhorn-movies.properties
@@ -31,21 +31,37 @@
 #     - enhanced-audio : for so-called enhanced audio tracks
 ##
 
+# Re-encode audiovisual stream
+profile.av.work.name = Re-encode audiovisual track
+profile.av.work.input = stream
+profile.av.work.output = audiovisual
+profile.av.work.mimetype = #{in.video.mimetype}
+profile.av.work.suffix = -work.#{in.video.suffix}
+profile.av.work.ffmpeg.command = -i #{in.video.path} -sameq -shortest -acodec copy -vcodec copy -copyts #{out.dir}/#{out.name}#{out.suffix}
+
+# Mux one audio and one video stream
+profile.mux-av.work.name = mux audio and video
+profile.mux-av.work.input = stream
+profile.mux-av.work.output = visual
+profile.mux-av.work.mimetype = #{in.video.mimetype}
+profile.mux-av.work.suffix = -work.#{in.video.suffix}
+profile.mux-av.work.ffmpeg.command = -i #{in.audio.path} -i #{in.video.path} -sameq -shortest #{out.dir}/#{out.name}#{out.suffix}
+
 # Audio only (strip video)
-profile.audio-only.http.name = audio only
-profile.audio-only.http.input = visual
-profile.audio-only.http.output = audio
-profile.audio-only.http.suffix = -aonly.#{in.video.suffix}
-profile.audio-only.http.mimetype = #{in.video.mimetype}
-profile.audio-only.http.ffmpeg.command = -i #{in.video.path} -acodec copy -vn #{out.dir}/#{out.name}#{out.suffix}
+profile.audio-only.work.name = audio only
+profile.audio-only.work.input = visual
+profile.audio-only.work.output = audio
+profile.audio-only.work.suffix = -work.#{in.video.suffix}
+profile.audio-only.work.mimetype = #{in.video.mimetype}
+profile.audio-only.work.ffmpeg.command = -i #{in.video.path} -acodec copy -sameq -copyts -vn #{out.dir}/#{out.name}#{out.suffix}
 
 # Video only (strip audio)
-profile.video-only.http.name = video only
-profile.video-only.http.input = visual
-profile.video-only.http.output = visual
-profile.video-only.http.suffix = -vonly.#{in.video.suffix}
-profile.video-only.http.mimetype = #{in.video.mimetype}
-profile.video-only.http.ffmpeg.command = -i #{in.video.path} -vcodec copy -an #{out.dir}/#{out.name}#{out.suffix}
+profile.video-only.work.name = video only
+profile.video-only.work.input = visual
+profile.video-only.work.output = visual
+profile.video-only.work.suffix = -work.#{in.video.suffix}
+profile.video-only.work.mimetype = #{in.video.mimetype}
+profile.video-only.work.ffmpeg.command = -i #{in.video.path} -vcodec copy -sameq -copyts -an #{out.dir}/#{out.name}#{out.suffix}
 
 # Format definition for mjpeg movies used by the video segmenter (matterhorn-vsegmenter)
 profile.video-segmentation.http.name = motion jpeg
