--- a/modules/matterhorn-conductor/pom.xml
+++ b/modules/matterhorn-conductor/pom.xml
@@ -135,6 +135,7 @@
               OSGI-INF/operations/error-handler.xml,
               OSGI-INF/operations/image.xml,
               OSGI-INF/operations/inspect.xml,
+              OSGI-INF/operations/prepare-av.xml,
               OSGI-INF/operations/publish.xml,
               OSGI-INF/operations/review.xml,
               OSGI-INF/operations/segment.xml,
