--- a/docs/felix/conf/feeds/series.properties
+++ b/docs/felix/conf/feeds/series.properties
@@ -9,7 +9,8 @@ feed.copyright=All rights reserved by The Opencast Project
 feed.home=/engage/ui
 feed.entry=/engage/ui/embed.html?id={0}
 feed.cover=/engage/feed-cover.png
-feed.rssflavor=presenter/delivery
+feed.rssflavors=presentation/delivery,presenter/delivery
 feed.rsstags=rss
+feed.rssmediatype=video,audio
 feed.atomflavors=presenter/delivery,presentation/delivery
 feed.atomtags=atom
