--- a/modules/matterhorn-working-file-repository-service-impl/pom.xml
+++ b/modules/matterhorn-working-file-repository-service-impl/pom.xml
@@ -19,6 +19,11 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-remote-api</artifactId>
+      <version>1.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-kernel</artifactId>
       <version>1.1-SNAPSHOT</version>
     </dependency>
