--- a/modules/matterhorn-caption-impl/pom.xml
+++ b/modules/matterhorn-caption-impl/pom.xml
@@ -23,6 +23,11 @@
       <version>1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-workspace-api</artifactId>
+      <version>1.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi_R4_core</artifactId>
     </dependency>
